syntax = "proto3";
package calculator;
option go_package = "calculator/calculatorpb";

message Calculator{
  int32 firstOperand = 1;
  int32 secondOperand = 2;
  string operator = 3;
}

message CalculatorRequest{
  Calculator calculator = 1;

}

message CalculatorResponse{
  string result = 1;
}

message PrimeNumberRequest{
  int64 number = 1;
}

message PrimeNumberResult{
  int64 factor = 1 ;
}


message CalculateAverageRequest{

  int32 number = 1;
}
message CalculateAverageResponse{
  float average = 1;
}
message FindMaxRequest{
  int32 number = 1;
}
message FindMaxResponse{
  int32 max = 1;
}

message SquareRootRequest{
  int32 number = 1;
}
message SquareRootResponse{
  double result = 1;
}
service CalculatorService{
  //unary

  rpc Calculate(CalculatorRequest) returns (CalculatorResponse){};
  rpc CalculatePrimeNumberDecomposition(PrimeNumberRequest) returns (stream PrimeNumberResult){};
  rpc CalculateAverage_ClientStreaming(stream CalculateAverageRequest) returns (CalculateAverageResponse){};
  rpc FindMaxBiDiStreaming(stream FindMaxRequest) returns (stream FindMaxResponse){};
  rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse){};
}
